# gnome-search-provider-steam

./: Cargo.toml  Makefile  README.md
dbus-1/: dev.trytonvanmeer.Steam.SearchProvider.service
providers/: dev.trytonvanmeer.Steam.SearchProvider.ini
src/: main.rs
systemd/: dev.trytonvanmeer.Steam.SearchProvider.service
