[package]
name = "gnome-search-provider-steam"
version = "1.0.0"
edition = "2021"
authors = ["Tryton Lux <code@trytonvanmeer.dev>"]

[dependencies]
anyhow = "1"
gio = "0.20"
search-provider = { version = "0.10", default-features = false, features = ["tokio"] }
steamlocate = "2.0.0-beta.2"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
zbus = { version = "4.4", features = ["tokio"] }
